developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_name_contains_invalid_character-deadkey.kmn
c Description: Verifies that kmc reports an error with invalid names in groups, stores, and deadkeys

store(&NAME) 'error_name_contains_invalid_character-deadkey'

begin unicode > use(main)

group(main) using keys

  c the character between `test` and `test` below is a U+007F DEL, which may not
  c be visible in all contexts.

  deadkey(testtest) + [K_A] > 'a'


